cmake_minimum_required (VERSION 3.12)

set(PROJECT_NAME "02Math")
project(${PROJECT_NAME})

add_executable(${PROJECT_NAME} "main.cpp")

#find googleTest
find_package(GTest)
if(GTEST_FOUND)
	include_directories(${GTEST_INCLUDE_DIRS})
	target_link_libraries(${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES})
endif()
